Migrate tests from using primitive classes to annotated value classes