@@ -23,21 +23,86 @@
 
 package runtime.valhalla.inlinetypes;
 
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
+import jdk.internal.vm.annotation.NullRestricted;
 import jdk.test.lib.Asserts;
 
 /*
  * @test QuickeningTest
  * @summary Test quickening of getfield and putfield applied to inline fields
  * @library /test/lib
- * @compile -XDenablePrimitiveClasses Point.java JumboInline.java QuickeningTest.java
- * @run main/othervm -XX:+EnableValhalla -XX:+EnablePrimitiveClasses runtime.valhalla.inlinetypes.QuickeningTest
+ * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED QuickeningTest.java
+ * @run main/othervm --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -XX:+EnableValhalla runtime.valhalla.inlinetypes.QuickeningTest
  */
 
 public class QuickeningTest {
 
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class Point {
+        final int x;
+        final int y;
+
+        public Point(int x, int y) {
+            this.x = x;
+            this.y = y;
+        }
+    }
+
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class JumboInline {
+        final long l0;
+        final long l1;
+        final long l2;
+        final long l3;
+        final long l4;
+        final long l5;
+        final long l6;
+        final long l7;
+        final long l8;
+        final long l9;
+        final long l10;
+        final long l11;
+        final long l12;
+        final long l13;
+        final long l14;
+        final long l15;
+        final long l16;
+        final long l17;
+        final long l18;
+        final long l19;
+
+        public JumboInline(long l0Val, long l1Val) {
+            l0 = l0Val;
+            l1 = l1Val;
+            l2 = l0+l1;
+            l3 = l1+l2;
+            l4 = l2+l3;
+            l5 = l3+l4;
+            l6 = l4+l5;
+            l7 = l5+l6;
+            l8 = l6+l7;
+            l9 = l7+l8;
+            l10 = l8+l9;
+            l11 = l9+l10;
+            l12 = l10+l11;
+            l13 = l11+l12;
+            l14 = l12+l13;
+            l15 = l13+l14;
+            l16 = l14+l15;
+            l17 = l15+l16;
+            l18 = l16+l17;
+            l19 = l17+l18;
+        }
+    }
+
     static class Parent {
-    Point.ref nfp;       /* Not flattenable inline field */
+    Point nfp;       /* Not flattenable inline field */
+    @NullRestricted
     Point fp;         /* Flattenable and flattened inline field */
+    @NullRestricted
     JumboInline fj;    /* Flattenable not flattened inline field */
 
         public void setNfp(Point p) { nfp = p; }
@@ -47,8 +112,10 @@ public class QuickeningTest {
 
     static class Child extends Parent {
         // This class inherited fields from the Parent class
-        Point.ref nfp2;      /* Not flattenable inline field */
+        Point nfp2;      /* Not flattenable inline field */
+        @NullRestricted
         Point fp2;        /* Flattenable and flattened inline field */
+        @NullRestricted
         JumboInline fj2;   /* Flattenable not flattened inline field */
 
         public void setNfp2(Point p) { nfp2 = p; }
@@ -56,15 +123,19 @@ public class QuickeningTest {
         public void setFj2(JumboInline j) { fj2 = j; }
     }
 
-    static final primitive class Value {
-        final Point.ref nfp;       /* Not flattenable inline field */
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class Value {
+        final Point nfp;       /* Not flattenable inline field */
+        @NullRestricted
         final Point fp;         /* Flattenable and flattened inline field */
+        @NullRestricted
         final JumboInline fj;    /* Flattenable not flattened inline field */
 
         private Value() {
-            nfp = Point.default;
-            fp = Point.default;
-            fj = JumboInline.default;
+            nfp = null;
+            fp = new Point(0, 0);
+            fj = new JumboInline(0, 0);
         }
     }
 
@@ -88,7 +159,7 @@ public class QuickeningTest {
         Asserts.assertEquals(c.fj2.l0, 0L, "invalid value for uninitialized not flattened field");
         Asserts.assertEquals(c.fj2.l1, 0L, "invalid value for uninitialized not flattened field");
 
-        Value v = Value.default;
+        Value v = new Value();
         Asserts.assertEquals(v.nfp, null, "invalid uninitialized not flattenable");
         Asserts.assertEquals(v.fp.x, 0, "invalid value for uninitialized flattened field");
         Asserts.assertEquals(v.fp.y, 0, "invalid value for uninitialized flattened field");
