@@ -22,6 +22,8 @@
  */
 
 
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
 import jdk.test.lib.Asserts;
 
 
@@ -31,13 +33,14 @@ import jdk.test.lib.Asserts;
  * @library /testlibrary /test/lib
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
  * @requires (os.family == "linux" | os.family == "mac")
- * @compile -XDenablePrimitiveClasses TestJNIIsSameObject.java
- * @run main/othervm/native -XX:+EnableValhalla -XX:+EnablePrimitiveClasses TestJNIIsSameObject
+ * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED TestJNIIsSameObject.java
+ * @run main/othervm/native -XX:+EnableValhalla --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED TestJNIIsSameObject
  */
 
-/** test was failing before adding the -XDenablePrimitiveClasses option, but the option should stay as it declares a primitive class  */
 public class TestJNIIsSameObject {
-  static primitive class Value {
+  @ImplicitlyConstructible
+  @LooselyConsistentValue
+  static value class Value {
     int i;
 
     public Value(int i) {
